<?xml version="1.0"?>
<package format="2">
  <name>property_based_tester</name>
  <version>2.0.0</version>
  <description>The automated test generation for robot self examination package</description>


  <maintainer email="salman.omar.sohail@gmail.com">Salman Omar Sohail</maintainer>

  <license>private</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/Environment/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/Environment/models"/>
  </export>

</package>
